--- a/resume.html
+++ b/resume.html
@@ -225,11 +225,13 @@
   <h2 class="section-title">📞 Contact</h2>
   <div class="underline"></div>
   <div class="contact-details">
-    <p>✉️ <a href="mailto:fahadwrites@gmail.com">fahadwrites@gmail.com</a></p>
-    <p>📸 <a href="https://www.instagram.com/fahadcopycrafter" class="fa fa-instagram">@fahadcopycrafter</a>
-    <p>🌐 <a href="smfali.github.io/portfolio">smfali.github.io/portfolio</a></p>
+    <p>✉️ <strong>Email:</strong> <a href="mailto:fahadwrites@gmail.com">fahadwrites@gmail.com</a></p>
+    <p>🌐 <strong>Portfolio:</strong> <a href="https://smfali.github.io/portfolio" target="_blank">smfali.github.io/portfolio</a></p>
+    <p>📸 <strong>Instagram:</strong> <a href="https://instagram.com/fahadwrites" target="_blank">@fahadwrites</a></p>
   </div>
+  <p class="bio-highlight">Available for remote copywriting projects worldwide 🌍</p>
 </div>
+
 
 
     <!-- Footer -->
