--- a/index.html
+++ b/index.html
@@ -503,6 +503,9 @@
 	  color: #d8e4ff; /* soft light blue */
 	  margin-top: 8px;
 	}
+	.portfolio-header{
+	  padding-top:30px;
+	}  
 
   </style>
 </head>
@@ -1319,4 +1322,5 @@
 
 </body>
 </html>
+
 
