--- a/resume.html
+++ b/resume.html
@@ -153,7 +153,7 @@
 </head>
 <body>
     <!-- Resume Title -->
-<h1 class="resume-title">FAHAD ALI — The Copywriter</h1>
+<h1 class="resume-title">FAHAD ALI — Resume</h1>
       
   <main class="wrap">
 
